# ptd-python-cli

./: .flake8  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.opencode/agent/: python-dev.md
.opencode/command/: setup.md  transpile.md
docs/base/: PERFORMANCE.md  performance.md  ptd-paradigm.md
docs/guides/: getting-started.md
src/: cli.rs  lib.rs
src/basiccli/: __init__.py  cli.py
src/basiccli/commands/: __init__.py  benchmark.py  hello.py  hello.rs  version.py
src/basiccli/utils/: __init__.py  file_handler.py  logger.py  result.py
tests/: __init__.py  integration.rs
tests/commands/: __init__.py  test_benchmark.py  test_benchmark.rs  test_hello.py  test_hello.rs  test_version.py  test_version.rs
tests/utils/: __init__.py  test_file_handler.py  test_file_handler.rs  test_logger.py  test_logger.rs
